--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 FLASK_RUN=Inicio
 FLASK_DEBUG=True
 FLASK_SECRET_KEY=pon-tu-clave-aqui
-apyKey='pon-aqui-tu-apikey-COINAPI'
+apiKey='pon-aqui-tu-apikey-COINAPI'
